--- a/src/app/components/produto/produto.component.html
+++ b/src/app/components/produto/produto.component.html
@@ -1,5 +1,5 @@
-<div class="flex-container">
-  <div>
+<div class="flex-container" style="width: 100%">
+  <div style="width: 100%">
     <mat-card>
       <mat-card-title>
       <span>
@@ -107,18 +107,16 @@
 <!--              <mat-option *ngFor="let operadora of todasOperadoras;" [value]="operadora">{{operadora.nome}}</mat-option>-->
 <!--            </mat-select>-->
 <!--          </mat-form-field>-->
-          <div>
-            <mat-form-field appearance="outline" style="width: 50%">
-              <mat-label>Abrangencia</mat-label>
-              <input matInput placeholder="Abrangencia" [disabled]="!adicionandoProduto() && !editandoProduto()"
-                     [(ngModel)]="produtoEditando.abrangencia">
-            </mat-form-field>
-            <mat-form-field appearance="outline" style="width: 50%">
-              <mat-label>Reembolso</mat-label>
-              <input matInput placeholder="Reembolso" [disabled]="!adicionandoProduto() && !editandoProduto()"
-                     [(ngModel)]="produtoEditando.reembolso">
-            </mat-form-field>
-          </div>
+          <mat-form-field appearance="outline" style="width: 100%">
+            <mat-label>Abrangencia</mat-label>
+            <input matInput placeholder="Abrangencia" [disabled]="!adicionandoProduto() && !editandoProduto()"
+                   [(ngModel)]="produtoEditando.abrangencia">
+          </mat-form-field>
+          <mat-form-field appearance="outline" style="width: 100%">
+            <mat-label>Reembolso</mat-label>
+            <input matInput placeholder="Reembolso" [disabled]="!adicionandoProduto() && !editandoProduto()"
+                   [(ngModel)]="produtoEditando.reembolso">
+          </mat-form-field>
         </mat-card-content>
       </mat-card>
     </div>
@@ -151,85 +149,105 @@
             <mat-card>
               <mat-card-title>Pronto Socorro</mat-card-title>
               <mat-card-content>
-                <mat-form-field appearance="outline" style="width: 100%">
-                  <mat-label>Percentual</mat-label>
-                  <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                         [(ngModel)]="produtoEditando.coparticipacao.percentualProntoSocorro">
-                </mat-form-field>
+                <div>
+                  <mat-form-field appearance="outline">
+                    <mat-label>Percentual</mat-label>
+                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                           [(ngModel)]="produtoEditando.coparticipacao.percentualProntoSocorro">
+                  </mat-form-field>
+                </div>
 
-                <mat-form-field appearance="outline" style="width: 100%">
-                  <mat-label>Limite R$</mat-label>
-                  <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                         [(ngModel)]="produtoEditando.coparticipacao.valorProntoSocorro">
-                </mat-form-field>
+                <div>
+                  <mat-form-field appearance="outline">
+                    <mat-label>Limite R$</mat-label>
+                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                           [(ngModel)]="produtoEditando.coparticipacao.valorProntoSocorro">
+                  </mat-form-field>
+                </div>
               </mat-card-content>
             </mat-card>
 
             <mat-card style="margin-left: 20px">
               <mat-card-title>Consulta</mat-card-title>
               <mat-card-content>
-                <mat-form-field appearance="outline" style="width: 100%">
-                  <mat-label>Percentual</mat-label>
-                  <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                         [(ngModel)]="produtoEditando.coparticipacao.percentualConsulta">
-                </mat-form-field>
+                <div>
+                  <mat-form-field appearance="outline">
+                    <mat-label>Percentual</mat-label>
+                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                           [(ngModel)]="produtoEditando.coparticipacao.percentualConsulta">
+                  </mat-form-field>
+                </div>
 
-                <mat-form-field appearance="outline" style="width: 100%">
-                  <mat-label>Limite R$</mat-label>
-                  <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                         [(ngModel)]="produtoEditando.coparticipacao.valorConsulta">
-                </mat-form-field>
+                <div>
+                  <mat-form-field appearance="outline">
+                    <mat-label>Limite R$</mat-label>
+                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                           [(ngModel)]="produtoEditando.coparticipacao.valorConsulta">
+                  </mat-form-field>
+                </div>
               </mat-card-content>
             </mat-card>
 
             <mat-card style="margin-left: 20px">
               <mat-card-title>Exame Simples</mat-card-title>
               <mat-card-content>
-                <mat-form-field appearance="outline" style="width: 100%">
-                  <mat-label>Percentual</mat-label>
-                  <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                         [(ngModel)]="produtoEditando.coparticipacao.percentualExameSimples">
-                </mat-form-field>
+                <div>
+                  <mat-form-field appearance="outline">
+                    <mat-label>Percentual</mat-label>
+                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                           [(ngModel)]="produtoEditando.coparticipacao.percentualExameSimples">
+                  </mat-form-field>
+                </div>
 
-                <mat-form-field appearance="outline" style="width: 100%">
-                  <mat-label>Limite R$</mat-label>
-                  <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                         [(ngModel)]="produtoEditando.coparticipacao.valorExameSimples">
-                </mat-form-field>
+                <div>
+                  <mat-form-field appearance="outline">
+                    <mat-label>Limite R$</mat-label>
+                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                           [(ngModel)]="produtoEditando.coparticipacao.valorExameSimples">
+                  </mat-form-field>
+                </div>
               </mat-card-content>
             </mat-card>
 
             <mat-card style="margin-left: 20px">
               <mat-card-title>Exame Especial</mat-card-title>
               <mat-card-content>
-                <mat-form-field appearance="outline" style="width: 100%">
-                  <mat-label>Percentual</mat-label>
-                  <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                         [(ngModel)]="produtoEditando.coparticipacao.percentualExameEspecial">
-                </mat-form-field>
+                <div>
+                  <mat-form-field appearance="outline">
+                    <mat-label>Percentual</mat-label>
+                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                           [(ngModel)]="produtoEditando.coparticipacao.percentualExameEspecial">
+                  </mat-form-field>
+                </div>
 
-                <mat-form-field appearance="outline" style="width: 100%">
-                  <mat-label>Limite R$</mat-label>
-                  <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                         [(ngModel)]="produtoEditando.coparticipacao.valorExameEspecial">
-                </mat-form-field>
+                <div>
+                  <mat-form-field appearance="outline">
+                    <mat-label>Limite R$</mat-label>
+                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                           [(ngModel)]="produtoEditando.coparticipacao.valorExameEspecial">
+                  </mat-form-field>
+                </div>
               </mat-card-content>
             </mat-card>
 
             <mat-card style="margin-left: 20px">
               <mat-card-title>Internacao</mat-card-title>
               <mat-card-content>
-                <mat-form-field appearance="outline" style="width: 100%">
-                  <mat-label>Percentual</mat-label>
-                  <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                         [(ngModel)]="produtoEditando.coparticipacao.percentualInternacao">
-                </mat-form-field>
+                <div>
+                  <mat-form-field appearance="outline">
+                    <mat-label>Percentual</mat-label>
+                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                           [(ngModel)]="produtoEditando.coparticipacao.percentualInternacao">
+                  </mat-form-field>
+                </div>
 
-                <mat-form-field appearance="outline" style="width: 100%">
-                  <mat-label>Limite R$</mat-label>
-                  <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                         [(ngModel)]="produtoEditando.coparticipacao.valorInternacao">
-                </mat-form-field>
+                <div>
+                  <mat-form-field appearance="outline">
+                    <mat-label>Limite R$</mat-label>
+                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                           [(ngModel)]="produtoEditando.coparticipacao.valorInternacao">
+                  </mat-form-field>
+                </div>
               </mat-card-content>
             </mat-card>
           </div>
@@ -247,7 +265,7 @@
               </mat-panel-description>
             </mat-expansion-panel-header>
             <div class="flex-container" style="flex-direction: row">
-              <mat-card>
+              <mat-card style="width: 100%">
                 <mat-card-content>
                   <div [hidden]="editandoProduto() || adicionandoProduto()">
                     <mat-table #sortLaboratorio="matSort" [dataSource]="dataSourceLaboratorio" matSort class="mat-elevation-z8">
@@ -310,7 +328,7 @@
               </mat-panel-description>
             </mat-expansion-panel-header>
             <div class="flex-container" style="flex-direction: row">
-              <mat-card>
+              <mat-card style="width: 100%">
                 <mat-card-content>
                   <div [hidden]="editandoProduto() || adicionandoProduto()">
                     <mat-table #sortHospital="matSort" [dataSource]="dataSourceHospital" matSort class="mat-elevation-z8">
