--- a/src/app/components/produto/produto.component.html
+++ b/src/app/components/produto/produto.component.html
@@ -146,7 +146,7 @@
                 <div>
                   <mat-form-field appearance="outline">
                     <mat-label>Percentual</mat-label>
-                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                    <input matInput placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
                            [(ngModel)]="produtoEditando.coparticipacao.percentualProntoSocorro">
                   </mat-form-field>
                 </div>
@@ -154,7 +154,7 @@
                 <div>
                   <mat-form-field appearance="outline">
                     <mat-label>Limite R$</mat-label>
-                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                    <input matInput placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
                            [(ngModel)]="produtoEditando.coparticipacao.valorProntoSocorro">
                   </mat-form-field>
                 </div>
@@ -167,7 +167,7 @@
                 <div>
                   <mat-form-field appearance="outline">
                     <mat-label>Percentual</mat-label>
-                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                    <input matInput placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
                            [(ngModel)]="produtoEditando.coparticipacao.percentualConsulta">
                   </mat-form-field>
                 </div>
@@ -175,7 +175,7 @@
                 <div>
                   <mat-form-field appearance="outline">
                     <mat-label>Limite R$</mat-label>
-                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                    <input matInput placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
                            [(ngModel)]="produtoEditando.coparticipacao.valorConsulta">
                   </mat-form-field>
                 </div>
@@ -188,7 +188,7 @@
                 <div>
                   <mat-form-field appearance="outline">
                     <mat-label>Percentual</mat-label>
-                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                    <input matInput placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
                            [(ngModel)]="produtoEditando.coparticipacao.percentualExameSimples">
                   </mat-form-field>
                 </div>
@@ -196,7 +196,7 @@
                 <div>
                   <mat-form-field appearance="outline">
                     <mat-label>Limite R$</mat-label>
-                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                    <input matInput placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
                            [(ngModel)]="produtoEditando.coparticipacao.valorExameSimples">
                   </mat-form-field>
                 </div>
@@ -209,7 +209,7 @@
                 <div>
                   <mat-form-field appearance="outline">
                     <mat-label>Percentual</mat-label>
-                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                    <input matInput placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
                            [(ngModel)]="produtoEditando.coparticipacao.percentualExameEspecial">
                   </mat-form-field>
                 </div>
@@ -217,7 +217,7 @@
                 <div>
                   <mat-form-field appearance="outline">
                     <mat-label>Limite R$</mat-label>
-                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                    <input matInput placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
                            [(ngModel)]="produtoEditando.coparticipacao.valorExameEspecial">
                   </mat-form-field>
                 </div>
@@ -230,7 +230,7 @@
                 <div>
                   <mat-form-field appearance="outline">
                     <mat-label>Percentual</mat-label>
-                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                    <input matInput placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
                            [(ngModel)]="produtoEditando.coparticipacao.percentualInternacao">
                   </mat-form-field>
                 </div>
@@ -238,7 +238,7 @@
                 <div>
                   <mat-form-field appearance="outline">
                     <mat-label>Limite R$</mat-label>
-                    <input matInput placeholder="Abrangencia" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                    <input matInput placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
                            [(ngModel)]="produtoEditando.coparticipacao.valorInternacao">
                   </mat-form-field>
                 </div>
