--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -84,7 +84,7 @@
           </mat-form-field>
           <mat-form-field appearance="outline" style="width: 100%" *ngIf="adicionandoUsuario()">
             <mat-label>Senha</mat-label>
-            <input matInput placeholder="Senha" [(ngModel)]="usuarioEditando.password">
+            <input matInput placeholder="Senha" [(ngModel)]="usuarioEditando.password" type="password">
           </mat-form-field>
         </mat-card-content>
       </mat-card>
