--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -17,27 +17,27 @@
         <mat-table #sortTabela="matSort" [dataSource]="dataSourceTabela" matSort class="mat-elevation-z8">
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
-            <mat-cell *matCellDef="let produto" (click)="selecionaTabela(produto)" class="mouse-pointer"> {{produto.id}} </mat-cell>
+            <mat-cell *matCellDef="let tabela" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.id}} </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="nome">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
-            <mat-cell *matCellDef="let produto" (click)="selecionaTabela(produto)" class="mouse-pointer"> {{produto.nome}} </mat-cell>
+            <mat-cell *matCellDef="let tabela" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.nome}} </mat-cell>
           </ng-container>
 
-          <ng-container matColumnDef="abrangencia">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Abrangencia </mat-header-cell>
-            <mat-cell *matCellDef="let produto" (click)="selecionaTabela(produto)" class="mouse-pointer"> {{produto.abrangencia}} </mat-cell>
+          <ng-container matColumnDef="estado">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Estado </mat-header-cell>
+            <mat-cell *matCellDef="let tabela" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.estado.sigla}} </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="operadora">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Operadora </mat-header-cell>
-            <mat-cell *matCellDef="let produto" (click)="selecionaTabela(produto)" class="mouse-pointer"> {{produto.operadora.nome}} </mat-cell>
+            <mat-cell *matCellDef="let tabela" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.operadora.nome}} </mat-cell>
           </ng-container>
 
-          <ng-container matColumnDef="reembolso">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Reembolso </mat-header-cell>
-            <mat-cell *matCellDef="let produto" (click)="selecionaTabela(produto)" class="mouse-pointer"> {{produto.reembolso}} </mat-cell>
+          <ng-container matColumnDef="administradora">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Administradora </mat-header-cell>
+            <mat-cell *matCellDef="let tabela" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.administradora.nome}} </mat-cell>
           </ng-container>
 
           <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
@@ -65,7 +65,7 @@
           <a *ngIf="!editandoTabela() && !adicionandoTabela()" (click)="removerTabela()">
             <mat-icon class="mouse-pointer">delete</mat-icon>
           </a>
-          <a *ngIf="adicionandoTabela()" (click)="salvarNovoTabela()">
+          <a *ngIf="adicionandoTabela()" (click)="salvarNovaTabela()">
             <mat-icon class="mouse-pointer">save</mat-icon>
           </a>
           <a *ngIf="editandoTabela()" (click)="atualizarTabela()">
@@ -83,19 +83,72 @@
 
         <mat-card-content>
           <mat-form-field appearance="outline" style="width: 100%">
-            <mat-label>Nome</mat-label>
-            <input matInput placeholder="Nome" [disabled]="!adicionandoTabela() && !editandoTabela()"
-                   [(ngModel)]="tabelaEditando.nome">
-          </mat-form-field>
-          <mat-form-field appearance="outline" style="width: 100%">
-            <mat-label>UF</mat-label>
-            <input matInput [formControl]="estadoAutoCompleteControl" [matAutocomplete]="auto" type="text">
-            <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" [displayWith]="estadoDisplayFn">
+            <mat-label>Estado</mat-label>
+            <input matInput [formControl]="estadoAutoCompleteControl" [matAutocomplete]="auto1" type="text">
+            <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" [displayWith]="estadoDisplayFn">
               <mat-option *ngFor="let estado of estadoFilteredOptions | async" [value]="estado">
                 {{estado.nome}}
               </mat-option>
             </mat-autocomplete>
           </mat-form-field>
+
+          <mat-form-field appearance="outline" style="width: 100%">
+            <mat-label>Nome</mat-label>
+            <input matInput placeholder="Nome" [disabled]="!adicionandoTabela() && !editandoTabela()"
+                   [(ngModel)]="tabelaEditando.nome">
+          </mat-form-field>
+          <mat-form-field appearance="outline" style="width: 100%">
+            <mat-label>Administradora</mat-label>
+            <input matInput [formControl]="administradoraAutoCompleteControl" [matAutocomplete]="auto2" type="text">
+            <mat-autocomplete autoActiveFirstOption #auto2="matAutocomplete" [displayWith]="administradoraDisplayFn">
+              <mat-option *ngFor="let administradora of administradoraFilteredOptions | async" [value]="administradora">
+                {{administradora.nome}}
+              </mat-option>
+            </mat-autocomplete>
+          </mat-form-field>
+          <mat-form-field appearance="outline" style="width: 100%">
+            <mat-label>Operadora</mat-label>
+            <input matInput [formControl]="operadoraAutoCompleteControl" [matAutocomplete]="auto3" type="text">
+            <mat-autocomplete autoActiveFirstOption #auto3="matAutocomplete" [displayWith]="operadoraDisplayFn">
+              <mat-option *ngFor="let operadora of operadoraFilteredOptions | async" [value]="operadora">
+                {{operadora.nome}}
+              </mat-option>
+            </mat-autocomplete>
+          </mat-form-field>
+          <div>
+            <mat-form-field appearance="outline" style="width: 50%">
+              <mat-label>Idade Min.</mat-label>
+              <input type="number" matInput placeholder="Idade Minima" [disabled]="!adicionandoTabela() && !editandoTabela()"
+                     [(ngModel)]="tabelaEditando.idadeMinima">
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 50%">
+              <mat-label>Idade Max.</mat-label>
+              <input type="number" matInput placeholder="Idade Maxima" [disabled]="!adicionandoTabela() && !editandoTabela()"
+                     [(ngModel)]="tabelaEditando.idadeMaxima">
+            </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field appearance="outline" style="width: 50%">
+              <mat-label>Qtd Min. Vidas</mat-label>
+              <input type="number" matInput placeholder="Idade Minima" [disabled]="!adicionandoTabela() && !editandoTabela()"
+                     [(ngModel)]="tabelaEditando.qtdMinVidas">
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 50%">
+              <mat-label>Qtd Min. Titulares</mat-label>
+              <input type="number" matInput placeholder="Idade Maxima" [disabled]="!adicionandoTabela() && !editandoTabela()"
+                     [(ngModel)]="tabelaEditando.qtdMinTitulares">
+            </mat-form-field>
+          </div>
+
+          <div style="text-align: right">
+            <span>
+              <mat-slide-toggle [(ngModel)]="tabelaEditando.contemplaMEI" [disabled]="!adicionandoTabela() && !editandoTabela()" labelPosition="before">MEI</mat-slide-toggle>
+            </span>
+            <span style="padding-left: 25px">
+              <mat-slide-toggle [(ngModel)]="tabelaEditando.compulsoria" [disabled]="!adicionandoTabela() && !editandoTabela()" labelPosition="before">Compulsoria</mat-slide-toggle>
+            </span>
+          </div>
+
         </mat-card-content>
       </mat-card>
     </div>
@@ -117,10 +170,10 @@
         <mat-expansion-panel>
           <mat-expansion-panel-header>
             <mat-panel-title>
-              <mat-icon>attach_money</mat-icon>
+              <mat-icon>book</mat-icon>
             </mat-panel-title>
             <mat-panel-description>
-              Coparticipacoes
+              Produtos
             </mat-panel-description>
           </mat-expansion-panel-header>
 
@@ -128,136 +181,6 @@
             Oi =)
           </div>
         </mat-expansion-panel>
-
-        <div class="flex-container" style="flex-direction: row; width: 100%; margin-top: 5px">
-          <div style="width: 50%">
-            <mat-expansion-panel (opened)="carregaTabelaLaboratorio(dataSourceLaboratorio.data)">
-              <mat-expansion-panel-header>
-                <mat-panel-title>
-                  <mat-icon>science</mat-icon>
-                </mat-panel-title>
-                <mat-panel-description>
-                  Laboratorios
-                </mat-panel-description>
-              </mat-expansion-panel-header>
-              <div class="flex-container" style="flex-direction: row">
-                <mat-card style="width: 100%">
-                  <mat-card-content>
-                    <div [hidden]="editandoTabela() || adicionandoTabela()">
-                      <mat-table #sortLaboratorio="matSort" [dataSource]="dataSourceLaboratorio" matSort class="mat-elevation-z8">
-                        <ng-container matColumnDef="id">
-                          <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
-                          <mat-cell *matCellDef="let laboratorio"> {{laboratorio.id}} </mat-cell>
-                        </ng-container>
-
-                        <ng-container matColumnDef="nome">
-                          <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
-                          <mat-cell *matCellDef="let laboratorio"> {{laboratorio.nome}} </mat-cell>
-                        </ng-container>
-
-                        <mat-header-row *matHeaderRowDef="['id', 'nome']"></mat-header-row>
-                        <mat-row *matRowDef="let row; columns: ['id', 'nome'];"></mat-row>
-
-                      </mat-table>
-                      <mat-paginator #paginatorLaboratorio [pageSizeOptions]="[10, 50, 100]" [length]="dataSourceLaboratorio.data.length" showFirstLastButtons></mat-paginator>
-                    </div>
-                    <div [hidden]="!editandoTabela() && !adicionandoTabela()">
-                      <mat-table #sortLaboratorioEditando="matSort" [dataSource]="dataSourceLaboratorio" matSort class="mat-elevation-z8">
-                        <ng-container matColumnDef="id">
-                          <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
-                          <mat-cell *matCellDef="let laboratorio" (click)="laboratorio.selected = !laboratorio.selected" class="mouse-pointer"> {{laboratorio.id}} </mat-cell>
-                        </ng-container>
-
-                        <ng-container matColumnDef="nome">
-                          <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
-                          <mat-cell *matCellDef="let laboratorio" (click)="laboratorio.selected = !laboratorio.selected" class="mouse-pointer"> {{laboratorio.nome}} </mat-cell>
-                        </ng-container>
-
-                        <ng-container matColumnDef="selected">
-                          <mat-header-cell *matHeaderCellDef mat-sort-header style="text-align: center"> Selecione </mat-header-cell>
-                          <mat-cell *matCellDef="let laboratorio">
-                            <section style="width: 100%; text-align: center">
-                              <mat-checkbox [(ngModel)]="laboratorio.selected"></mat-checkbox>
-                            </section>
-                          </mat-cell>
-                        </ng-container>
-
-                        <mat-header-row *matHeaderRowDef="['id', 'nome', 'selected']"></mat-header-row>
-                        <mat-row *matRowDef="let row; columns: ['id', 'nome', 'selected'];"></mat-row>
-
-                      </mat-table>
-                      <mat-paginator #paginatorLaboratorioEditando [pageSizeOptions]="[10, 50, 100]" [length]="dataSourceLaboratorio.data.length" showFirstLastButtons></mat-paginator>
-                    </div>
-                  </mat-card-content>
-                </mat-card>
-              </div>
-            </mat-expansion-panel>
-          </div>
-          <div style="width: 50%; padding-left: 10px">
-            <mat-expansion-panel (opened)="carregaTabelaHospital(dataSourceHospital.data)">
-              <mat-expansion-panel-header>
-                <mat-panel-title>
-                  <mat-icon>local_hospital</mat-icon>
-                </mat-panel-title>
-                <mat-panel-description>
-                  Hospitais
-                </mat-panel-description>
-              </mat-expansion-panel-header>
-              <div class="flex-container" style="flex-direction: row">
-                <mat-card style="width: 100%">
-                  <mat-card-content>
-                    <div [hidden]="editandoTabela() || adicionandoTabela()">
-                      <mat-table #sortHospital="matSort" [dataSource]="dataSourceHospital" matSort class="mat-elevation-z8">
-                        <ng-container matColumnDef="id">
-                          <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
-                          <mat-cell *matCellDef="let laboratorio"> {{laboratorio.id}} </mat-cell>
-                        </ng-container>
-
-                        <ng-container matColumnDef="nome">
-                          <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
-                          <mat-cell *matCellDef="let laboratorio"> {{laboratorio.nome}} </mat-cell>
-                        </ng-container>
-
-                        <mat-header-row *matHeaderRowDef="['id', 'nome']"></mat-header-row>
-                        <mat-row *matRowDef="let row; columns: ['id', 'nome'];"></mat-row>
-
-                      </mat-table>
-                      <mat-paginator #paginatorHospital [pageSizeOptions]="[10, 50, 100]" [length]="dataSourceHospital.data.length" showFirstLastButtons></mat-paginator>
-                    </div>
-                    <div [hidden]="!editandoTabela() && !adicionandoTabela()">
-                      <mat-table #sortHospitalEditando="matSort" [dataSource]="dataSourceHospital" matSort class="mat-elevation-z8">
-                        <ng-container matColumnDef="id">
-                          <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
-                          <mat-cell *matCellDef="let laboratorio" (click)="laboratorio.selected = !laboratorio.selected" class="mouse-pointer"> {{laboratorio.id}} </mat-cell>
-                        </ng-container>
-
-                        <ng-container matColumnDef="nome">
-                          <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
-                          <mat-cell *matCellDef="let laboratorio" (click)="laboratorio.selected = !laboratorio.selected" class="mouse-pointer"> {{laboratorio.nome}} </mat-cell>
-                        </ng-container>
-
-                        <ng-container matColumnDef="selected">
-                          <mat-header-cell *matHeaderCellDef mat-sort-header style="text-align: center"> Selecione </mat-header-cell>
-                          <mat-cell *matCellDef="let laboratorio">
-                            <section style="width: 100%; text-align: center">
-                              <mat-checkbox [(ngModel)]="laboratorio.selected"></mat-checkbox>
-                            </section>
-                          </mat-cell>
-                        </ng-container>
-
-                        <mat-header-row *matHeaderRowDef="['id', 'nome', 'selected']"></mat-header-row>
-                        <mat-row *matRowDef="let row; columns: ['id', 'nome', 'selected'];"></mat-row>
-
-                      </mat-table>
-                      <mat-paginator #paginatorHospitalEditando [pageSizeOptions]="[10, 50, 100]" [length]="dataSourceHospital.data.length" showFirstLastButtons></mat-paginator>
-                    </div>
-                  </mat-card-content>
-                </mat-card>
-              </div>
-            </mat-expansion-panel>
-          </div>
-        </div>
-
       </mat-accordion>
     </mat-card-content>
   </mat-card>
